@@ -394,6 +394,9 @@ Release 2.6.0 - 2014-11-18
 
   BUG FIXES
 
+    YARN-4611. Fix scheduler load simulator to support multi-layer network
+    location. (Ming Ma via xgong)
+
     YARN-2251. Avoid negative elapsed time in JHS/MRAM web UI and services.
     (Zhijie Shen via junping_du)
 
